<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtVerifyPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/verify_phone_number"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="312dp"
        android:layout_height="203dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/verify_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_verify_number_bg" />

    <TextView
        android:id="@+id/txtVerifyDesc"
        android:layout_width="297dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sf_pro_text_thin"
        android:text="@string/verify_number_desc"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtVerifyPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/txtVerifyPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/txtVerifyPhoneNumber" />

    <EditText
        android:id="@+id/edTxtPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/sf_pro_text_thin"
        android:hint="@string/your_phone_number"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edTxtCountryCode"
        app:layout_constraintTop_toBottomOf="@+id/txtVerifyDesc" />

    <EditText
        android:id="@+id/edTxtCountryCode"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/sf_pro_text_thin"
        android:hint="+91"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVerifyDesc" />

    <Button
        android:id="@+id/btnGenerateOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/generate_opt"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPhoneNumber"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarGenerateOTP"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnGenerateOtp"
        app:layout_constraintEnd_toEndOf="@+id/btnGenerateOtp"
        app:layout_constraintTop_toTopOf="@+id/btnGenerateOtp" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerateOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>

