<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp_verify">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="288dp"
        android:layout_height="229dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_otp_screen_bg" />

    <TextView
        android:id="@+id/txtEnterOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/enter_otp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_text_thin"
        android:text="@string/enter_otp_desc"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/txtEnterOTP"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/txtEnterOTP"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterOTP" />

    <EditText
        android:id="@+id/edTxtOTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVerifyOTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/verify_otp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtOTP"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/txtOtpError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyOTP"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarVerifyOTP"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnVerifyOTP"
        app:layout_constraintEnd_toEndOf="@+id/btnVerifyOTP"
        app:layout_constraintTop_toTopOf="@+id/btnVerifyOTP" />

</androidx.constraintlayout.widget.ConstraintLayout>